# String-View-for-C

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  Makefile  README.md  build_test_msvc.ps1  premake5.lua
src/: string_view.c  string_view.h
test/: test.c
